# todo

./: Dockerfile  README.md  docker-compose.test.yml  pyproject.toml  requirements.txt
app/todo/: db.py  main.py  models.py  services.py
tests/: test_services.py  test_simple.py
todo/: db.py  main.py  models.py  services.py
