[tool.poetry]
name = "todo"
version = "0.1.2"
description = ""
authors = ["Natawut Nupairoj <natawut.n@chula.ac.th>"]

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.61.1"
uvicorn = "^0.11.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
